--- a/README
+++ b/README
@@ -1,11 +1,11 @@
 NAME
-    Task::Spark::Form - All you need to start with Spark
+    Task::Spark::Form - All you need to start with Spark::Form
 
 VERSION
-    version 0.01
+    version 0.02
 
 SYNOPSIS
-    perl -MCPAN -e 'install Task::Spark::Form'
+        perl -MCPAN -e 'install Task::Spark::Form'
 
 DESCRIPTION
     The bare essentials of Spark::Form, with everything you'll probably ever
@@ -15,7 +15,7 @@ AUTHOR
       Kent Fredric <kentnl@cpan.org>
 
 COPYRIGHT AND LICENSE
-    This software is copyright (c) 2009 by Pedigree Consulting.
+    This software is copyright (c) 2009 by Kent Fredric.
 
     This is free software; you can redistribute it and/or modify it under
     the same terms as the Perl 5 programming language system itself.
