--- a/Changes
+++ b/Changes
@@ -1,6 +1,52 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+ [Dependencies::Author::New]
+ - (suggests)	 Dist::Zilla::PluginBundle::Author::KENTNL	 v1.0.0
+ - (recommended) Dist::Zilla::PluginBundle::Author::KENTNL::Lite 0.01009803
+ - (requires)	 Dist::Zilla::PluginBundle::Author::KENTNL::Lite
+
+ [Dependencies::Build::New]
+ - Module::Build 0.3601
+ - Test::More 0.88
+
+ [Dependencies::Configure::New]
+ - Module::Build 0.3601
+
+ [Dependencies::Test::New]
+ - English
+ - File::Find
+ - File::Temp
+
+ [Packaging]
+ - Migrate Toolkit to @Author::KENTNL
+ - Migrate to CPANChanges format Changelogs
+ - add .perltidyrc
+ - add perlcritic.rc
+ - Module::Build script regenerated heavily
+ - Moving to x.y.z "Git Versions"
+ - Updated Copyright Licenses
+ - Added weaver.ini
+ - No longer ships a Makefile.PL
+
+ [Tests::Author::New]
+ - CriticTests
+
+ [Tests::New]
+ - Plugin::ReportVersions::Tiny
+
+ [Tests::Release::New]
+ - DistMetaTests - EolTests - KwaliteeTests
+
+ [Tests::Release::Removed]
+ - release-meta-yaml.t # Yaml sucks, JSON rules.
+
+ [Tests::Release::Updated]
+ - PodCoverageTests
+ - PodSyntaxTests
+
+ [Tests::Updated]
+ - Plugin::CompileTest
 
 0.03012607 2009-11-01T19:18:39Z
  - Add dep on Catalyst::Plugin::Spark::Form
